# DCP

./: .gitmodules  CMakeLists.txt  README.md  fold_example.cpp  fold_example_ref.cpp  test.cpp  test_fold.cpp  test_fold_ref.cpp  test_reduce.cpp
abstract/: CMakeLists.txt
abstract/include/: AbstractCollection.h  Collection.h  Fractal.h  Sequence.h  Sequence.tpp
abstract/src/: Sequence.cpp
benchmarks/: CMakeLists.txt
doc/: .~lock.experiment.ods#  abstract.odg  experiment.ods  health.run.out  health_run.ods  literature_review.odg  perimeter_run.ods  power_run.ods  treeadd.run.out  treeadd_run.ods
doc/feasibility_study/olden_benchmarks/: olden.odt
doc/feasibility_study/olden_benchmarks/bisort/: .~lock.bisort.odt#  bisort.odt
doc/feasibility_study/olden_benchmarks/health/: health.odt  hospital_process.odg  village_tree.odg
doc/feasibility_study/olden_benchmarks/mst/: .~lock.mst.odt#  algorithm.odg  graph_data_structure.odg  mst.odt
doc/feasibility_study/olden_benchmarks/perimeter/: .~lock.feasibility_report.ods#  feasibility.report.excel  feasibility_report.ods  perimeter.odg  perimeter.odt
doc/feasibility_study/olden_benchmarks/power/: computational_scheme.odg  power.odt  power_bench_desc.odt  power_scheme.odg
doc/feasibility_study/olden_benchmarks/tsp/: maketree.odg  tsp.odt
doc/first_year_review/: .~lock.presentation.odp#  presentation.odp
doc/thesis/: .~lock.thesis.odt#  thesis.odt
playground/: CMakeLists.txt  linked_list.c  linked_list.s  stack  stack.c  stack.s  vector.cpp  vector.s
playground/array/: .array.cpp.swp  .array.ll.swp  CMakeLists.txt  array.cpp  array.ll
playground/array/abstract/: .array.cpp.swp  array.cpp
playground/array/original/: .array.c.swp  array  array.c
playground/closest-pair-points/: closest-pair-points.cpp  test  test.cpp  test.s
playground/fibonacci/: fib_iterative  fib_iterative.cpp  fib_recursive  fib_recursive.cpp
playground/find-without-pair/: find_without_pair  find_without_pair.cpp
playground/linked_list/: .linked_list.cpp.swp  .linked_list.ll.swp  CMakeLists.txt  linked_list.cpp  linked_list.ll
playground/linked_list/abstract/: linked_list.cpp
playground/linked_list/original/: linked_list  linked_list.c
playground/linked_list/recreation/: linked_list.cpp
playground/log/: log  log.cpp
playground/robot/: input.grid  robot.cpp
playground/sequence/: array.cpp  linked-list  linked-list.cpp
playground/std_vector/: CMakeLists.txt
playground/std_vector/abstract/: std_vector.cpp
playground/std_vector/original/: std_vector.cpp
scripts/: clean-project.sh  run-health.sh  run-treeadd.sh
scripts/include/: project-environment.sh
tool/: CMakeLists.txt
tool/src/: LoopConvert.cpp
